--- a/src/main/resources/css/main.css
+++ b/src/main/resources/css/main.css
@@ -8,7 +8,7 @@
     -fx-background-color: blue;
 }
 .floor,.player{
-    -fx-background-color: grey;
+    -fx-background-color: white;
 }
 .playerBody{
     -fx-background-color: #1e90ff;
