--- a/src/main/resources/fxml/parts/box.fxml
+++ b/src/main/resources/fxml/parts/box.fxml
@@ -1,6 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Rectangle2D?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
 
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="78.0" prefWidth="66.0" styleClass="box" stylesheets="@../../css/main.css" xmlns:fx="http://javafx.com/fxml/1" />
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="78.0" prefWidth="66.0" styleClass="box" stylesheets="@../../css/main.css" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/10.0.1">
+   <children>
+      <ImageView fitHeight="78.0" fitWidth="66.0">
+         <image>
+            <Image url="@../../images/box.jpg" />
+         </image>
+         <viewport>
+            <Rectangle2D minX="50.0" />
+         </viewport>
+      </ImageView>
+   </children>
+</Pane>
