--- a/src/main/resources/fxml/parts/target.fxml
+++ b/src/main/resources/fxml/parts/target.fxml
@@ -1,6 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.Pane?>
 
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="78.0" prefWidth="66.0" styleClass="target" stylesheets="@../../css/main.css"  xmlns:fx="http://javafx.com/fxml/1" />
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="78.0" prefWidth="66.0" styleClass="floor" stylesheets="@../../css/main.css" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/10.0.1">
+   <children>
+      <ImageView fitHeight="50.0" fitWidth="50.0" layoutX="8.0" layoutY="14.0">
+         <image>
+            <Image url="@../../images/target.png" />
+         </image>
+      </ImageView>
+   </children>
+</Pane>
