--- a/src/main/resources/fxml/parts/lobby.fxml
+++ b/src/main/resources/fxml/parts/lobby.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="306.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/10.0.1">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="306.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="180.79998779296875" minWidth="10.0" prefWidth="180.79998779296875" />
       <ColumnConstraints hgrow="SOMETIMES" maxWidth="307.1999755859375" minWidth="10.0" prefWidth="234.40001220703124" />
@@ -23,18 +23,18 @@
     <RowConstraints maxHeight="320.799991607666" minHeight="10.0" prefHeight="187.7999938964844" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <Button mnemonicParsing="false" prefHeight="26.0" prefWidth="208.0" text="Start game" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="3" />
-      <Button mnemonicParsing="false" prefHeight="26.0" prefWidth="95.0" text="Leave Lobby" GridPane.halignment="CENTER">
+      <Button fx:id="startGameButton" mnemonicParsing="false" prefHeight="26.0" prefWidth="208.0" text="Start game" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="3" />
+      <Button fx:id="leaveLobbyButton" mnemonicParsing="false" prefHeight="26.0" prefWidth="95.0" text="Leave Lobby" GridPane.halignment="CENTER">
          <GridPane.margin>
             <Insets left="10.0" />
          </GridPane.margin>
       </Button>
-      <Label prefHeight="18.0" prefWidth="202.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+      <Label fx:id="ownerNameLabel" prefHeight="18.0" prefWidth="240.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
          <padding>
             <Insets left="5.0" />
          </padding>
       </Label>
-      <Label prefHeight="18.0" prefWidth="201.0" text="Label" GridPane.columnIndex="2" GridPane.rowIndex="1">
+      <Label fx:id="secondPlayerNameLabel" prefHeight="18.0" prefWidth="201.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
          <padding>
             <Insets left="5.0" />
          </padding>
@@ -56,7 +56,7 @@
                   <Insets right="5.0" />
                </HBox.margin>
             </Label>
-            <ComboBox prefHeight="26.0" prefWidth="116.0" />
+            <ComboBox fx:id="multiplayerMapsComboBox" prefHeight="26.0" prefWidth="116.0" />
          </children>
       </HBox>
    </children>
