--- a/src/main/resources/fxml/start/lobbies.fxml
+++ b/src/main/resources/fxml/start/lobbies.fxml
@@ -17,30 +17,35 @@
   </columnConstraints>
   <rowConstraints>
       <RowConstraints maxHeight="81.0" minHeight="10.0" prefHeight="81.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="81.0" minHeight="10.0" prefHeight="81.0" vgrow="SOMETIMES" />
     <RowConstraints maxHeight="95.0" minHeight="0.0" prefHeight="11.0" vgrow="SOMETIMES" />
     <RowConstraints maxHeight="248.0" minHeight="10.0" prefHeight="248.0" vgrow="SOMETIMES" />
     <RowConstraints maxHeight="58.0" minHeight="10.0" prefHeight="17.0" vgrow="SOMETIMES" />
-      <RowConstraints maxHeight="115.0" minHeight="10.0" prefHeight="109.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <Label alignment="CENTER" prefHeight="27.0" prefWidth="356.0" text="Multiplayer" GridPane.columnIndex="1">
+      <Label alignment="CENTER" prefHeight="27.0" prefWidth="356.0" text="Multiplayer" GridPane.columnIndex="1" GridPane.rowIndex="1">
          <font>
             <Font name="Arial Bold" size="24.0" />
          </font>
       </Label>
-      <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="17.0" prefWidth="356.0" text="Opened lobbies" GridPane.columnIndex="1" GridPane.rowIndex="1">
+      <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="17.0" prefWidth="356.0" text="Opened lobbies" GridPane.columnIndex="1" GridPane.rowIndex="2">
          <font>
             <Font name="Arial Bold" size="14.0" />
          </font>
       </Label>
-      <ListView fx:id="openedLobbiesListView" prefHeight="238.0" prefWidth="309.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+      <ListView fx:id="openedLobbiesListView" prefHeight="238.0" prefWidth="309.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
          <GridPane.margin>
             <Insets left="30.0" right="30.0" top="10.0" />
          </GridPane.margin>
       </ListView>
-      <Button fx:id="joinLobbyButton" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" text="Join lobby" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="3" GridPane.valignment="CENTER" />
-      <Button fx:id="createCustomLobbyButton" mnemonicParsing="false" prefHeight="25.0" prefWidth="136.0" text="Create custom lobby" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
-      <Button fx:id="back" mnemonicParsing="false" text="back" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="CENTER" />
-      <Button fx:id="refreshButton" mnemonicParsing="false" text="Refresh" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+      <Button fx:id="joinLobbyButton" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" text="Join lobby" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="CENTER" />
+      <Button fx:id="createCustomLobbyButton" mnemonicParsing="false" prefHeight="25.0" prefWidth="136.0" text="Create custom lobby" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
+      <Button fx:id="back" mnemonicParsing="false" text="back" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
+      <Button fx:id="refreshButton" mnemonicParsing="false" text="Refresh" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+      <Label fx:id="playerNameLabel" alignment="CENTER" prefHeight="56.0" prefWidth="350.0" GridPane.columnIndex="1">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font>
+      </Label>
    </children>
 </GridPane>
