--- a/src/main/resources/fxml/parts/lobby.fxml
+++ b/src/main/resources/fxml/parts/lobby.fxml
@@ -4,17 +4,21 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.TextFlow?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="306.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="306.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1">
   <columnConstraints>
-    <ColumnConstraints hgrow="SOMETIMES" maxWidth="180.79998779296875" minWidth="10.0" prefWidth="180.79998779296875" />
-      <ColumnConstraints hgrow="SOMETIMES" maxWidth="307.1999755859375" minWidth="10.0" prefWidth="234.40001220703124" />
-    <ColumnConstraints hgrow="SOMETIMES" maxWidth="320.800048828125" minWidth="10.0" prefWidth="176.00002441406252" />
+    <ColumnConstraints hgrow="SOMETIMES" maxWidth="180.79998779296875" minWidth="10.0" prefWidth="146.0" />
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="329.0" minWidth="10.0" prefWidth="327.0" />
+    <ColumnConstraints hgrow="SOMETIMES" maxWidth="320.800048828125" minWidth="10.0" prefWidth="126.0" />
   </columnConstraints>
   <rowConstraints>
     <RowConstraints maxHeight="72.79999389648438" minHeight="10.0" prefHeight="44.00001831054688" vgrow="SOMETIMES" />
@@ -23,7 +27,7 @@
     <RowConstraints maxHeight="320.799991607666" minHeight="10.0" prefHeight="187.7999938964844" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <Button fx:id="startGameButton" mnemonicParsing="false" prefHeight="26.0" prefWidth="208.0" text="Start game" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="3">
+      <Button fx:id="startGameButton" mnemonicParsing="false" prefHeight="26.0" prefWidth="127.0" text="Start game" GridPane.halignment="CENTER" GridPane.rowIndex="1">
          <font>
             <Font name="System Bold" size="12.0" />
          </font></Button>
@@ -57,7 +61,7 @@
       </Label>
       <HBox prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
          <children>
-            <Label alignment="CENTER_RIGHT" prefHeight="31.0" prefWidth="98.0" text="Select map:" textAlignment="CENTER">
+            <Label fx:id="mapLabel" alignment="CENTER_RIGHT" prefHeight="31.0" prefWidth="98.0" text="Select map:" textAlignment="CENTER">
                <HBox.margin>
                   <Insets right="5.0" />
                </HBox.margin>
@@ -68,5 +72,20 @@
             <ComboBox fx:id="multiplayerMapsComboBox" prefHeight="26.0" prefWidth="116.0" />
          </children>
       </HBox>
+      <VBox prefHeight="80.0" prefWidth="239.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
+         <children>
+            <ScrollPane fx:id="lobbyChatPane" prefHeight="200.0" prefWidth="200.0">
+               <content>
+                  <TextFlow prefHeight="150.0" prefWidth="301.0" />
+               </content>
+            </ScrollPane>
+            <HBox prefHeight="0.0" prefWidth="239.0">
+               <children>
+                  <TextArea fx:id="lobbyChatInput" prefHeight="38.0" prefWidth="280.0" promptText="Write in lobby..." wrapText="true" />
+                  <Button fx:id="lobbyChatSend" mnemonicParsing="false" prefHeight="84.0" prefWidth="46.0" text="Send" />
+               </children>
+            </HBox>
+         </children>
+      </VBox>
    </children>
 </GridPane>
