--- a/Client/src/main/resources/fxml/parts/lobby.fxml
+++ b/Client/src/main/resources/fxml/parts/lobby.fxml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
@@ -14,11 +19,11 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.TextFlow?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="306.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="306.0" prefWidth="652.0" stylesheets="@../../css/main.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="180.79998779296875" minWidth="10.0" prefWidth="146.0" />
-      <ColumnConstraints hgrow="SOMETIMES" maxWidth="329.0" minWidth="10.0" prefWidth="327.0" />
-    <ColumnConstraints hgrow="SOMETIMES" maxWidth="320.800048828125" minWidth="10.0" prefWidth="126.0" />
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="399.0" minWidth="10.0" prefWidth="364.0" />
+    <ColumnConstraints hgrow="SOMETIMES" maxWidth="352.0" minWidth="10.0" prefWidth="191.0" />
   </columnConstraints>
   <rowConstraints>
     <RowConstraints maxHeight="72.79999389648438" minHeight="10.0" prefHeight="44.00001831054688" vgrow="SOMETIMES" />
@@ -27,11 +32,11 @@
     <RowConstraints maxHeight="320.799991607666" minHeight="10.0" prefHeight="187.7999938964844" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <Button fx:id="startGameButton" mnemonicParsing="false" prefHeight="26.0" prefWidth="127.0" text="Start game" GridPane.halignment="CENTER" GridPane.rowIndex="1">
+      <Button fx:id="startGameButton" mnemonicParsing="false" prefHeight="26.0" prefWidth="98.0" styleClass="myButton" text="Start game" GridPane.halignment="CENTER" GridPane.rowIndex="1">
          <font>
             <Font name="System Bold" size="12.0" />
          </font></Button>
-      <Button fx:id="leaveLobbyButton" mnemonicParsing="false" prefHeight="26.0" prefWidth="95.0" text="Delete lobby" GridPane.halignment="CENTER">
+      <Button fx:id="leaveLobbyButton" mnemonicParsing="false" prefHeight="26.0" prefWidth="95.0" styleClass="myButton" text="Delete lobby" GridPane.halignment="CENTER">
          <GridPane.margin>
             <Insets left="10.0" />
          </GridPane.margin>
@@ -82,10 +87,13 @@
             <HBox prefHeight="0.0" prefWidth="239.0">
                <children>
                   <TextArea fx:id="lobbyChatInput" prefHeight="38.0" prefWidth="280.0" promptText="Write in lobby..." wrapText="true" />
-                  <Button fx:id="lobbyChatSend" mnemonicParsing="false" prefHeight="84.0" prefWidth="46.0" text="Send" />
+                  <Button fx:id="lobbyChatSend" mnemonicParsing="false" prefHeight="31.0" prefWidth="69.0" styleClass="myButton" text="Send" />
                </children>
             </HBox>
          </children>
+         <GridPane.margin>
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+         </GridPane.margin>
       </VBox>
    </children>
 </GridPane>
