--- a/Client/src/main/resources/fxml/start/lobbies.fxml
+++ b/Client/src/main/resources/fxml/start/lobbies.fxml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.image.*?>
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableView?>
@@ -8,17 +13,17 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="618.0" prefWidth="692.0" stylesheets="@../../css/main.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
   <columnConstraints>
-    <ColumnConstraints hgrow="SOMETIMES" maxWidth="340.0" minWidth="10.0" prefWidth="100.0" />
-      <ColumnConstraints hgrow="SOMETIMES" maxWidth="489.0" minWidth="10.0" prefWidth="348.0" />
-      <ColumnConstraints hgrow="SOMETIMES" maxWidth="368.0" minWidth="10.0" prefWidth="143.0" />
+    <ColumnConstraints hgrow="SOMETIMES" maxWidth="340.0" minWidth="10.0" prefWidth="175.0" />
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="489.0" minWidth="10.0" prefWidth="365.0" />
+      <ColumnConstraints hgrow="SOMETIMES" maxWidth="368.0" minWidth="10.0" prefWidth="175.0" />
   </columnConstraints>
   <rowConstraints>
-      <RowConstraints maxHeight="81.0" minHeight="10.0" prefHeight="81.0" vgrow="SOMETIMES" />
-      <RowConstraints maxHeight="81.0" minHeight="10.0" prefHeight="81.0" vgrow="SOMETIMES" />
-    <RowConstraints maxHeight="95.0" minHeight="0.0" prefHeight="11.0" vgrow="SOMETIMES" />
-    <RowConstraints maxHeight="248.0" minHeight="10.0" prefHeight="248.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="100.0" minHeight="10.0" prefHeight="24.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="138.0" minHeight="10.0" prefHeight="58.0" vgrow="SOMETIMES" />
+    <RowConstraints maxHeight="112.0" minHeight="0.0" prefHeight="80.0" vgrow="SOMETIMES" />
+    <RowConstraints maxHeight="284.0" minHeight="10.0" prefHeight="280.0" vgrow="SOMETIMES" />
     <RowConstraints maxHeight="58.0" minHeight="10.0" prefHeight="17.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
@@ -32,10 +37,9 @@
             <Font name="Arial Bold" size="14.0" />
          </font>
       </Label>
-      <Button fx:id="joinLobbyButton" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" text="Join lobby" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="CENTER" />
-      <Button fx:id="createCustomLobbyButton" mnemonicParsing="false" prefHeight="25.0" prefWidth="136.0" text="Create custom lobby" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
-      <Button fx:id="back" mnemonicParsing="false" text="back" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
-      <Button fx:id="refreshButton" mnemonicParsing="false" text="Refresh" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+      <Button fx:id="joinLobbyButton" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" styleClass="myButton" text="Join lobby" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="4" GridPane.valignment="CENTER" />
+      <Button fx:id="createCustomLobbyButton" mnemonicParsing="false" prefHeight="31.0" prefWidth="159.0" styleClass="myButton" text="Create custom lobby" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
+      <Button fx:id="back" mnemonicParsing="false" styleClass="myButton" text="disconnect" GridPane.halignment="CENTER" GridPane.rowIndex="2" GridPane.valignment="CENTER" />
       <Label fx:id="playerNameLabel" alignment="CENTER" prefHeight="56.0" prefWidth="350.0" GridPane.columnIndex="1">
          <font>
             <Font name="System Bold" size="14.0" />
@@ -46,5 +50,10 @@
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
          </columnResizePolicy>
       </TableView>
+      <ImageView fx:id="refreshButton" fitHeight="58.0" fitWidth="41.0" pickOnBounds="true" preserveRatio="true" styleClass="myButton" GridPane.columnIndex="2" GridPane.rowIndex="3" GridPane.valignment="TOP">
+         <image>
+            <Image url="@../../images/refresh.png" />
+         </image>
+      </ImageView>
    </children>
 </GridPane>
