--- a/Client/src/main/resources/fxml/start/start.fxml
+++ b/Client/src/main/resources/fxml/start/start.fxml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.effect.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.effect.InnerShadow?>
@@ -9,7 +14,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/10.0.1">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@../../css/main.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
   <columnConstraints>
       <ColumnConstraints hgrow="SOMETIMES" maxWidth="181.60003662109375" minWidth="10.0" prefWidth="181.60003662109375" />
       <ColumnConstraints hgrow="SOMETIMES" maxWidth="310.39996337890625" minWidth="10.0" prefWidth="250.39999999999995" />
@@ -32,7 +37,7 @@
       </Label>
       <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
          <children>
-            <Button fx:id="singleplayerButton" alignment="CENTER" contentDisplay="CENTER" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="26.0" prefWidth="180.0" text="Singleplayer" textAlignment="RIGHT">
+            <Button fx:id="singleplayerButton" alignment="CENTER" contentDisplay="CENTER" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" prefHeight="26.0" prefWidth="180.0" styleClass="myButton" text="Singleplayer" textAlignment="RIGHT">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
@@ -41,7 +46,7 @@
       </HBox>
       <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
          <children>
-            <Button fx:id="multiplayerButton" alignment="CENTER" mnemonicParsing="false" prefHeight="26.0" prefWidth="178.0" text="Multiplayer" textAlignment="RIGHT">
+            <Button fx:id="multiplayerButton" alignment="CENTER" mnemonicParsing="false" prefHeight="26.0" prefWidth="178.0" styleClass="myButton" text="Multiplayer" textAlignment="RIGHT">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
