--- a/Client/src/main/resources/fxml/parts/lobbySecondPlayer.fxml
+++ b/Client/src/main/resources/fxml/parts/lobbySecondPlayer.fxml
@@ -1,10 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
@@ -19,7 +14,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.TextFlow?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="306.0" prefWidth="652.0" stylesheets="@../../css/main.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="306.0" prefWidth="652.0" stylesheets="@../../css/main.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="180.79998779296875" minWidth="10.0" prefWidth="146.0" />
       <ColumnConstraints hgrow="SOMETIMES" maxWidth="399.0" minWidth="10.0" prefWidth="364.0" />
@@ -32,11 +27,7 @@
     <RowConstraints maxHeight="320.799991607666" minHeight="10.0" prefHeight="187.7999938964844" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <Button fx:id="startGameButton" mnemonicParsing="false" prefHeight="26.0" prefWidth="98.0" styleClass="myButton" text="Start game" GridPane.halignment="CENTER" GridPane.rowIndex="1">
-         <font>
-            <Font name="System Bold" size="12.0" />
-         </font></Button>
-      <Button fx:id="leaveLobbyButton" mnemonicParsing="false" prefHeight="26.0" prefWidth="95.0" styleClass="myButton" text="Delete lobby" GridPane.halignment="CENTER">
+      <Button fx:id="leaveLobbyButton" mnemonicParsing="false" prefHeight="26.0" prefWidth="95.0" styleClass="myButton" text="Leave lobby" GridPane.halignment="CENTER">
          <GridPane.margin>
             <Insets left="10.0" />
          </GridPane.margin>
